apps/home/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:2026.9.0@sha256:f6509fcf917a732fd80058567b237d5b9286b9dc6c8dde1b655fbb69ebd600ad
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
        - name: config-git-sync
          image: alpine/git:v2.54.0@sha256:a4bb51f1a3553df194ce679fc1db721d8bfba2046fa1a88fe9d4ac551ffbce25
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - /usr/local/bin/git-sync.sh
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-git-sync
              mountPath: /usr/local/bin/git-sync.sh
              subPath: git-sync.sh
              readOnly: true
            - name: config-git-ssh
              mountPath: /etc/git-secret
              readOnly: true
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: config-git-sync
          configMap:
            name: config-git-sync
            defaultMode: 0555
        - name: config-git-ssh
          secret:
            secretName: esphome-config-git
            defaultMode: 0400
